<resources>

    <string name="app_name">Home Workout For Men</string>
    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="demo_text">Demo Text</string>
    <string name="start_workout">Start Workout</string>
    <string name="demo_time">00:00</string>
    <string name="step_demo_text">1 / 11</string>

    <string name="ad_main_id">ca-app-pub-6201944930453956~1595695535</string>
    <string name="get_started">Get Started</string>
    <string name="ready_to_take_on_the_challenge">Ready to take on the challenge?</string>

    <string name="weekly_purchase_button_text">SUBSCRIBE NOW\n1 week for free, then INR 99 / week</string>
    <string name="monthly_purchase_button_text">SUBSCRIBE NOW\n1 week for free, then INR 299 / Year</string>
    <string name="purchase_privacy_content">The transcript subscription Payment will be charged to the user\'s Google Account at confirmation of purchase and the subscription is set to auto-renew unless disabed 24-hours before the end of the current period. The Account will be charged for renewal within 24-hours prior to the end of the current period, and identify the cost of the renewal. Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="terms_of_use_title">Terms of use</string>
    <string name="restore_purchases_title">Restore Purchases</string>
    <string name="weekly_plan_offer_text">One week free after weekly Plan activated for INR 99</string>
    <string name="monthly_plan_offer_text">One week free after Monthly Plan activated for INR 199</string>
    <string name="yearly_plan_offer_text">One week free after Yearly Plan activated for INR 299</string>

    <!-- Completion screen -->
    <string name="error_complete_previous_challenge_first">Please finish the previous challenge date first.</string>
    <string name="bmi_title">BMI(kg/m\u00B2)</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="report">Report</string>
    <string name="history">History</string>

    <string name="settings">Settings</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="upgrade_remove_ads">Upgrade to remove ads</string>
    <string name="rest_set">Rest set</string>
    <string name="countdown_time">Countdown Time</string>
    <string name="sound_options">Sound options</string>
    <string name="workout">Workout</string>
    <string name="workouts">Workouts</string>
    <string name="voice_options_tts">Voice Options (TTS)</string>
    <string name="test_voice">Test Voice</string>
    <string name="select_tts_engine">Select TTS Engine</string>
    <string name="google_text_to_speech_engine">Google Text-to-speech Engine</string>
    <string name="download_tts_engine">Download TTS Engine</string>
    <string name="voice_language">Voice Language</string>
    <string name="download_more_tts_language_data">Download more TTS Language data</string>
    <string name="device_tts_setting">Device TTS Setting</string>
    <string name="health_data">Health Data</string>
    <string name="remind_me_to_workout_every_day">Remind me to workout every day</string>
    <string name="metric_imperial_units"><![CDATA[Metric & Imperial Units]]></string>
    <string name="keep_the_screen_on">Keep the Screen On</string>
    <string name="general_settings">General Settings</string>
    <string name="community">Community</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="support_us">Support Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="feed_back">Feed Back</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="btn_download_tts_engine">Download TTS Engine</string>
    <string name="btn_select_tts_engine">Select TTS Engine</string>

    <string name="did_you_hear_test_voice">Did you hear the test voice?</string>

    <string name="dl_test_voice_no_msg_test">The TTS engine you are using is not working now, please double check it, switch to another TTS engine, or download TTS voice language.</string>

    <string name="please_choose_guide_voice_engine">Please choose guide voice engine:</string>

    <string name="select_your_height_unit">Select your height unit</string>
    <string name="select_your_weight_unit">Select your weight unit</string>

    <string name="hint_monday">Monday</string>
    <string name="hint_tuesday">Tuesday</string>
    <string name="hint_wednesday">Wednesday</string>
    <string name="hint_thursday">Thursday</string>
    <string name="hint_friday">Friday</string>
    <string name="hint_saturday">Saturday</string>
    <string name="hint_sunday">Sunday</string>

    <string name="mute">Mute</string>

    <string name="voice_guide_txt">Voice Guide</string>
    <string name="coach_tips_txt">Coach tips</string>

    <string name="btn_ok">OK</string>
    <string name="btn_set">Set</string>
    <string name="btn_cancel">Cancel</string>

    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="_7x4_challenge">7x4 Challenge</string>

    <string name="menu_push_up_level">Push-up Level</string>

    <!-- Build wider -->
    <string name="build_wider_description">Pump up your shoulders with two dumbbells</string>
    <string name="build_wider_title">Build Wider Shoulders</string>
    <string name="build_wider_go_btn">Go!</string>
    <string name="build_wider_text_1">Fully exercising the deltoid muscles can effectively widen your shoulders. Focus on the middle deltoid; fully stimulate it with weights to increase the width of your shoulders. Exercise your front and</string>
    <string name="build_wider_text_2"><![CDATA[rear deltoids in isolation to make your shoulders rounder and bigger.<br /><br />This workout plan targets the three distinct parts of your deltoids. Combined with some compound shoulder exercises, it can build muscles and greatly pump up your shoulders!<br /><br /><b>Suggestions for dumbbells:</b><br /><br />- 2.5-5kg for beginner<br />- 5-10kg for intermediate<br />- 10-15kg for advanced.]]></string>

    <string name="build_wider_beginner_text_1">To get wider shoulders, you need to focus on exercising your front, middle and rear deltoids in isolation. It requires good control of your target muscles` contraction.\n</string>
    <string name="build_wider_beginner_text_2">This workout plan fully activates your shoulders from all angles, helping you feel the engagement of every single muscle.</string>

    <string name="build_wider_intermediate_text_1">Fully exercising the deltoid muscles can effectively widen your shoulders. Focus on the middle deltoid; fully stimulate it with weights to increase the width of your shoulders. Exercise your front and rear deltoids in isolation to make</string>
    <string name="build_wider_intermediate_text_2"><![CDATA[your shoulders rounder and bigger.<br /><br />This workout plan targets the three distinct parts of your deltoids. Combined with some compound shoulder exercises, it can build muscles and greatly pump up your shoulders!<br /><br /><b>Suggestions for dumbbells:</b><br /><br />- 2.5-5kg for beginner<br />- 5-10kg for intermediate<br />- 10-15kg for advanced.]]> </string>

    <string name="build_wider_advanced_text_1">Fully exercising the deltoid muscles can effectively widen your shoulders. Focus on the middle deltoid; fully stimulate it with weights to increase the width of your shoulders. Exercise your front and rear deltoids in isolation to make</string>
    <string name="build_wider_advanced_text_2"><![CDATA[your shoulders rounder and bigger.<br /><br />This workout plan targets the three distinct parts of your deltoids. Combined with some compound shoulder exercises, it can build muscles and greatly pump up your shoulders!<br /><br /><b>Suggestions for dumbbells:</b><br /><br />- 2.5-5kg for beginner<br />- 5-10kg for intermediate<br />- 10-15kg for advanced.]]> </string>

    <string name="build_wider_introduction">Introduction</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="build_wider_exercise_list">Exercise list</string>
    <string name="watch_video_to_unlock">Watch video to unlock</string>
    <string name="bw_for_specific_area">For specific area</string>
    <string name="title_library">Library</string>
    <string name="bw_lock_watch_the_video_to_use_training_plan_once">Watch the video to use training plan once</string>
    <string name="lib_more_workouts">More workouts</string>
    <string name="week_goal">Week Goal</string>
    <string name="set_your_weekly_goal">Set your weekly goal</string>
    <string name="we_recommend_training_at_least_3_days_weekly_for_a_better_result">We recommend training at least 3 days weekly for a better result.</string>
    <string name="weekly_training_days_title">Weekly training days</string>
    <string name="btn_save">Save</string>
    <string name="lib_more_exercise_hint">More exercise are on the way!</string>

    <string name="error_video_not_exist">Video can`t exist!</string>
    <string name="complete_lvl_done_msg">Nice you\'ve done it!</string>
    <string name="ready_to_go">Ready To Go!</string>
    <string name="restart_progress_title">Restart Progress</string>
    <string name="btn_quit">Quit</string>
    <string name="dl_exercise_quite_title">Don\'t quite! Feeling tired means it\'s working!</string>
    <string name="dl_come_back_in_30_minutes">Come back in 30 minutes</string>
    <string name="btn_continue">Continue</string>

    <string name="privacy_policy_link">https://doc-hosting.flycricket.io/home-workout-for-men-privacy-policy/7040fa61-1f6c-49ca-a5b9-09d26101bf4a/privacy</string>


    <string name="update">Update</string>
    <string name="btn_next">Next</string>
    <string name="btn_share">Share</string>
    <string name="update_msg">An New Version of APP is Available</string>
    <string name="critical_update_msg">An critical update is required</string>
    <string name="btn_update">Update</string>
    <string name="exit_confirmation">Are you sure want to exit?</string>

    <string name="contact_us">arrowwould@gmail.com</string>

    <string name="btn_do_it_again">Do It Again</string>
    <string name="version">Version 1.13</string>
    <string name="discover_more_exercises">Discover More Exercises</string>


    // Admob Native Ad

    <string name="native_advanced_ad_keys">ca-app-pub-6201944930453956/4155244416</string>


    <string name="app_open_ad_id">ca-app-pub-6201944930453956/2299903541</string>
<!--    <string name="app_open_ad_id">ca-app-pub-3940256099942544/3419835294</string>-->






</resources>
