<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorTheme"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@color/colorTheme"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_dp40"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgbtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:padding="@dimen/space_16dp"
            android:src="@drawable/ic_dialog_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/dl_exercise_quite_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20" />

        <Button
            android:id="@+id/btnQuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/space_64dp"
            android:layout_marginTop="@dimen/space_64dp"
            android:layout_marginEnd="@dimen/space_64dp"
            android:background="@drawable/round_corner_theme"
            android:padding="@dimen/space_16dp"
            android:text="@string/btn_quit"
            android:textColor="@color/colorTheme" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/space_64dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_64dp"
            android:background="@drawable/round_corner_white_trans"
            android:padding="@dimen/space_16dp"
            android:text="@string/btn_continue"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvComebackMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_24dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:background="@drawable/bottom_line_white"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/dl_come_back_in_30_minutes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>
</RelativeLayout>
