<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_16dp"
    android:paddingTop="@dimen/space_16dp"
    android:paddingEnd="@dimen/space_16dp"
    android:background="@color/colorTheme"
    android:paddingBottom="@dimen/space_8dp">

    <!-- Todo Title -->
    <TextView
        android:id="@+id/txt_dl_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8dp"
        android:text="@string/sound_options"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <!-- Todo Mute -->
    <RelativeLayout
        android:id="@+id/rlMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        android:padding="@dimen/space_8dp">

        <ImageView
            android:id="@+id/imgMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_sound_options"
            app:tint="@color/colorWhite" />

        <TextView
            style="@style/dialog_sound_option_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgMute"
            android:textColor="@color/colorWhite"
            android:text="@string/mute" />

        <Switch
            android:id="@+id/swtMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:thumbTint="@color/colorButton"
            android:checked="false" />

    </RelativeLayout>

    <!-- Todo Voice Guide -->
    <RelativeLayout
        android:id="@+id/rlVoiceGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:padding="@dimen/space_8dp">

        <ImageView
            android:id="@+id/imgVoiceGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_setting_voice_guide"
            android:tint="@color/colorWhite" />

        <TextView
            style="@style/dialog_sound_option_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_toEndOf="@+id/imgVoiceGuide"
            android:text="@string/voice_guide_txt" />

        <Switch
            android:id="@+id/swtVoiceGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/colorButton"
            android:layout_alignParentEnd="true"
            android:checked="true" />

    </RelativeLayout>

    <!-- Todo Coach tips -->
    <RelativeLayout
        android:id="@+id/rlCoachTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:padding="@dimen/space_8dp">

        <ImageView
            android:id="@+id/imgCoachTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_setting_coach_tips"
            app:tint="@color/colorWhite" />

        <TextView
            style="@style/dialog_sound_option_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgCoachTips"
            android:textColor="@color/colorWhite"
            android:text="@string/coach_tips_txt" />

        <Switch
            android:id="@+id/swtCoachTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:thumbTint="@color/colorButton"
            android:checked="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/space_16dp"
        android:padding="@dimen/space_16dp"
        android:text="@string/btn_ok"
        android:textStyle="normal"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/colorWhite" />

</LinearLayout>
