<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTheme"
    tools:context=".activity.HealthDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <!-- Todo Title -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorTheme">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/space_8dp"
                android:src="@drawable/ic_back"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_8dp"
                android:layout_toEndOf="@+id/imgBack"
                android:text="@string/health_data"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- Todo Gender -->
        <LinearLayout
            android:id="@+id/llGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4dp"
                android:textColor="@color/colorWhite"
                android:text="@string/gender"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/tvGenderVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4dp"
                android:text="@string/male"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <!-- Todo Date of birth -->
        <LinearLayout
            android:id="@+id/llDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4dp"
                android:textColor="@color/colorWhite"
                android:text="@string/date_of_birth"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/tvDateOfBirthVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4dp"
                android:text="1990-01-01"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llAdView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorTheme"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llAdViewFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:orientation="vertical"
        android:background="@color/colorTheme"
        android:visibility="gone" />

</LinearLayout>
